// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Network Filter should list only venues having APs 1`] = `
<DocumentFragment>
  .c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
}

.c10 svg {
  width: 16px;
  height: 16px;
}

.c10 svg:before {
  content: 'a';
}

.c10 svg path {
  color: var(--acx-primary-black);
}

.c10.ant-btn-link svg path {
  color: var(--acx-accents-blue-50);
}

.c10.ant-btn-link:hover {
  color: var(--acx-accents-blue-60);
}

.c10.ant-btn-link:hover svg path {
  color: var(--acx-accents-blue-60);
}

.c10.ant-btn-primary svg path {
  color: var(--acx-primary-white) !important;
}

.c10[disabled] svg path,
.c10.ant-btn-disabled svg path {
  color: var(--acx-primary-white);
}

.c10[disabled].ant-btn-link svg path,
.c10.ant-btn-disabled.ant-btn-link svg path,
.c10[disabled].ant-btn-default svg path,
.c10.ant-btn-disabled.ant-btn-default svg path,
.c10[disabled].ant-btn-primary svg path,
.c10.ant-btn-disabled.ant-btn-primary svg path {
  color: var(--acx-neutrals-40);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c2 .ant-select-focused .ant-select-selection-placeholder {
  color: var(--acx-neutrals-50);
}

.c2 .ant-select-selection-overflow-item-rest > .ant-select-selection-item {
  border: none;
  background: var(--acx-primary-white);
  min-width: 110px;
  padding-right: 0px;
  margin-right: 0px;
  margin-bottom: 0px;
}

.c9 {
  margin-top: 4px;
  margin-bottom: -4px;
  background-color: var(--acx-neutrals-10);
  text-align: right;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  padding: var(--acx-modal-footer-small-padding);
  gap: var(--acx-modal-footer-small-button-space);
}

.c6 {
  margin-top: 4px;
  border-top: 1px solid var(--acx-neutrals-20);
  padding: 10px;
  width: 350px;
}

.c7 {
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
  font-weight: var(--acx-body-font-weight);
}

.c8 .ant-checkbox-wrapper > span:last-child {
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
  font-weight: var(--acx-body-font-weight);
}

.c1 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.c0 {
  min-width: 169px;
  max-width: 322px;
  width: 322px;
}

.c0 .ant-select-selector > .ant-select-selection-overflow > .ant-select-selection-overflow-item.ant-select-selection-overflow-item-suffix {
  top: revert !important;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  line-height: 8px;
  -webkit-box-pack: right;
  -webkit-justify-content: right;
  -ms-flex-pack: right;
  justify-content: right;
}

@supports (-webkit-backdrop-filter:none) or (backdrop-filter:none) {

}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="ant-select ant-cascader c2 ant-select-multiple ant-select-allow-clear ant-select-show-arrow ant-select-open ant-select-show-search"
      >
        <div
          class="ant-select-selector"
        >
          <div
            class="ant-select-selection-overflow"
          >
            <div
              class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
              style="opacity: 1; order: 0;"
            >
              <div
                class="ant-select-selection-search"
                style="width: 0px;"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="rc_select_TEST_OR_SSR_list"
                  aria-expanded="true"
                  aria-haspopup="listbox"
                  aria-owns="rc_select_TEST_OR_SSR_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  id="rc_select_TEST_OR_SSR"
                  role="combobox"
                  style=""
                  type="search"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="ant-select-selection-search-mirror"
                >
                   
                </span>
              </div>
            </div>
          </div>
          <span
            class="ant-select-selection-placeholder"
          >
            Entire Organization
          </span>
        </div>
        <span
          aria-hidden="true"
          class="ant-select-arrow"
          style="user-select: none;"
          unselectable="on"
        >
          <span
            aria-label="search"
            class="anticon anticon-search ant-select-suffix"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="search"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
              />
            </svg>
          </span>
        </span>
        <div
          style="position: absolute; top: 0px; left: 0px; width: 100%;"
        >
          <div>
            <div
              class="ant-select-dropdown ant-cascader-dropdown"
              style="opacity: 0; min-width: auto;"
            >
              <div>
                <div
                  class="ant-cascader-menus"
                >
                  <ul
                    class="ant-cascader-menu"
                    role="menu"
                  >
                    <li
                      aria-checked="false"
                      class="ant-cascader-menu-item ant-cascader-menu-item-expand"
                      data-path-key="[{\\"type\\":\\"network\\",\\"name\\":\\"Network\\"},{\\"type\\":\\"zone\\",\\"name\\":\\"id5\\"}]"
                      role="menuitemcheckbox"
                    >
                      <span
                        class="ant-cascader-checkbox"
                      >
                        <span
                          class="ant-cascader-checkbox-inner"
                        />
                      </span>
                      <div
                        class="ant-cascader-menu-item-content"
                      >
                        <div
                          class="c3"
                          title="swg1"
                        >
                          <div
                            class="c4"
                          >
                            swg1
                          </div>
                          <div
                            class="c5"
                          />
                        </div>
                      </div>
                      <div
                        class="ant-cascader-menu-item-expand-icon"
                      >
                        <span
                          aria-label="right"
                          class="anticon anticon-right"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="right"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                            />
                          </svg>
                        </span>
                      </div>
                    </li>
                    <li
                      aria-checked="false"
                      class="ant-cascader-menu-item ant-cascader-menu-item-expand"
                      data-path-key="[{\\"type\\":\\"network\\",\\"name\\":\\"Network\\"},{\\"type\\":\\"zone\\",\\"name\\":\\"id1\\"}]"
                      role="menuitemcheckbox"
                    >
                      <span
                        class="ant-cascader-checkbox"
                      >
                        <span
                          class="ant-cascader-checkbox-inner"
                        />
                      </span>
                      <div
                        class="ant-cascader-menu-item-content"
                      >
                        <div
                          class="c3"
                          title="venue"
                        >
                          <div
                            class="c4"
                          >
                            venue
                          </div>
                          <div
                            class="c5"
                          />
                        </div>
                      </div>
                      <div
                        class="ant-cascader-menu-item-expand-icon"
                      >
                        <span
                          aria-label="right"
                          class="anticon anticon-right"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="right"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                            />
                          </svg>
                        </span>
                      </div>
                    </li>
                    <li
                      aria-checked="false"
                      class="ant-cascader-menu-item ant-cascader-menu-item-expand"
                      data-path-key="[{\\"type\\":\\"network\\",\\"name\\":\\"Network\\"},{\\"type\\":\\"zone\\",\\"name\\":\\"id3\\"}]"
                      role="menuitemcheckbox"
                    >
                      <span
                        class="ant-cascader-checkbox"
                      >
                        <span
                          class="ant-cascader-checkbox-inner"
                        />
                      </span>
                      <div
                        class="ant-cascader-menu-item-content"
                      >
                        <div
                          class="c3"
                          title="venue1"
                        >
                          <div
                            class="c4"
                          >
                            venue1
                          </div>
                          <div
                            class="c5"
                          />
                        </div>
                      </div>
                      <div
                        class="ant-cascader-menu-item-expand-icon"
                      >
                        <span
                          aria-label="right"
                          class="anticon anticon-right"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="right"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                            />
                          </svg>
                        </span>
                      </div>
                    </li>
                  </ul>
                </div>
                <div
                  class="c6"
                >
                  <span
                    class="c7"
                    style="margin-right: 10px;"
                  >
                    Radio:
                  </span>
                  <div
                    class="ant-checkbox-group c8"
                  >
                    <label
                      class="ant-checkbox-wrapper ant-checkbox-group-item"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                          value="6"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                      <span>
                        6 GHz
                      </span>
                    </label>
                    <label
                      class="ant-checkbox-wrapper ant-checkbox-group-item"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                          value="5"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                      <span>
                        5 GHz
                      </span>
                    </label>
                    <label
                      class="ant-checkbox-wrapper ant-checkbox-group-item"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                          value="2.4"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                      <span>
                        2.4 GHz
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  class="c9"
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-sm c10"
                    type="button"
                  >
                    <span>
                      Cancel
                    </span>
                  </button>
                  <button
                    class="ant-btn ant-btn-primary ant-btn-sm c10"
                    type="button"
                  >
                    <span>
                      Apply
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Network Filter should list only venues having Switches 1`] = `
<DocumentFragment>
  .c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
}

.c7 svg {
  width: 16px;
  height: 16px;
}

.c7 svg:before {
  content: 'a';
}

.c7 svg path {
  color: var(--acx-primary-black);
}

.c7.ant-btn-link svg path {
  color: var(--acx-accents-blue-50);
}

.c7.ant-btn-link:hover {
  color: var(--acx-accents-blue-60);
}

.c7.ant-btn-link:hover svg path {
  color: var(--acx-accents-blue-60);
}

.c7.ant-btn-primary svg path {
  color: var(--acx-primary-white) !important;
}

.c7[disabled] svg path,
.c7.ant-btn-disabled svg path {
  color: var(--acx-primary-white);
}

.c7[disabled].ant-btn-link svg path,
.c7.ant-btn-disabled.ant-btn-link svg path,
.c7[disabled].ant-btn-default svg path,
.c7.ant-btn-disabled.ant-btn-default svg path,
.c7[disabled].ant-btn-primary svg path,
.c7.ant-btn-disabled.ant-btn-primary svg path {
  color: var(--acx-neutrals-40);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c2 .ant-select-focused .ant-select-selection-placeholder {
  color: var(--acx-neutrals-50);
}

.c2 .ant-select-selection-overflow-item-rest > .ant-select-selection-item {
  border: none;
  background: var(--acx-primary-white);
  min-width: 110px;
  padding-right: 0px;
  margin-right: 0px;
  margin-bottom: 0px;
}

.c6 {
  margin-top: 4px;
  margin-bottom: -4px;
  background-color: var(--acx-neutrals-10);
  text-align: right;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  padding: var(--acx-modal-footer-small-padding);
  gap: var(--acx-modal-footer-small-button-space);
}

.c1 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.c0 {
  min-width: 169px;
  max-width: 322px;
  width: 322px;
}

.c0 .ant-select-selector > .ant-select-selection-overflow > .ant-select-selection-overflow-item.ant-select-selection-overflow-item-suffix {
  top: revert !important;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  line-height: 8px;
  -webkit-box-pack: right;
  -webkit-justify-content: right;
  -ms-flex-pack: right;
  justify-content: right;
}

@supports (-webkit-backdrop-filter:none) or (backdrop-filter:none) {

}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="ant-select ant-cascader c2 ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-open ant-select-show-search"
      >
        <div
          class="ant-select-selector"
        >
          <span
            class="ant-select-selection-search"
          >
            <input
              aria-autocomplete="list"
              aria-controls="rc_select_TEST_OR_SSR_list"
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-owns="rc_select_TEST_OR_SSR_list"
              autocomplete="off"
              class="ant-select-selection-search-input"
              id="rc_select_TEST_OR_SSR"
              role="combobox"
              type="search"
              value=""
            />
          </span>
          <span
            class="ant-select-selection-placeholder"
          >
            Entire Organization
          </span>
        </div>
        <span
          aria-hidden="true"
          class="ant-select-arrow"
          style="user-select: none;"
          unselectable="on"
        >
          <span
            aria-label="search"
            class="anticon anticon-search ant-select-suffix"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="search"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
              />
            </svg>
          </span>
        </span>
        <div
          style="position: absolute; top: 0px; left: 0px; width: 100%;"
        >
          <div>
            <div
              class="ant-select-dropdown ant-cascader-dropdown"
              style="opacity: 0; min-width: auto;"
            >
              <div>
                <div
                  class="ant-cascader-menus"
                >
                  <ul
                    class="ant-cascader-menu"
                    role="menu"
                  >
                    <li
                      aria-checked="false"
                      class="ant-cascader-menu-item ant-cascader-menu-item-expand"
                      data-path-key="[{\\"type\\":\\"network\\",\\"name\\":\\"Network\\"},{\\"type\\":\\"switchGroup\\",\\"name\\":\\"id4\\"}]"
                      role="menuitemcheckbox"
                    >
                      <div
                        class="ant-cascader-menu-item-content"
                      >
                        <div
                          class="c3"
                          title="swg"
                        >
                          <div
                            class="c4"
                          >
                            swg
                          </div>
                          <div
                            class="c5"
                          />
                        </div>
                      </div>
                      <div
                        class="ant-cascader-menu-item-expand-icon"
                      >
                        <span
                          aria-label="right"
                          class="anticon anticon-right"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="right"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                            />
                          </svg>
                        </span>
                      </div>
                    </li>
                    <li
                      aria-checked="false"
                      class="ant-cascader-menu-item ant-cascader-menu-item-expand"
                      data-path-key="[{\\"type\\":\\"network\\",\\"name\\":\\"Network\\"},{\\"type\\":\\"zone\\",\\"name\\":\\"id5\\"}]"
                      role="menuitemcheckbox"
                    >
                      <div
                        class="ant-cascader-menu-item-content"
                      >
                        <div
                          class="c3"
                          title="swg1"
                        >
                          <div
                            class="c4"
                          >
                            swg1
                          </div>
                          <div
                            class="c5"
                          />
                        </div>
                      </div>
                      <div
                        class="ant-cascader-menu-item-expand-icon"
                      >
                        <span
                          aria-label="right"
                          class="anticon anticon-right"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="right"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                            />
                          </svg>
                        </span>
                      </div>
                    </li>
                    <li
                      aria-checked="false"
                      class="ant-cascader-menu-item ant-cascader-menu-item-expand"
                      data-path-key="[{\\"type\\":\\"network\\",\\"name\\":\\"Network\\"},{\\"type\\":\\"switchGroup\\",\\"name\\":\\"id2\\"}]"
                      role="menuitemcheckbox"
                    >
                      <div
                        class="ant-cascader-menu-item-content"
                      >
                        <div
                          class="c3"
                          title="venue"
                        >
                          <div
                            class="c4"
                          >
                            venue
                          </div>
                          <div
                            class="c5"
                          />
                        </div>
                      </div>
                      <div
                        class="ant-cascader-menu-item-expand-icon"
                      >
                        <span
                          aria-label="right"
                          class="anticon anticon-right"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="right"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                            />
                          </svg>
                        </span>
                      </div>
                    </li>
                  </ul>
                </div>
                <div
                  class="c6"
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-sm c7"
                    type="button"
                  >
                    <span>
                      Cancel
                    </span>
                  </button>
                  <button
                    class="ant-btn ant-btn-primary ant-btn-sm c7"
                    type="button"
                  >
                    <span>
                      Apply
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Network Filter should select network node and bands 1`] = `
<DocumentFragment>
  .c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
}

.c10 svg {
  width: 16px;
  height: 16px;
}

.c10 svg:before {
  content: 'a';
}

.c10 svg path {
  color: var(--acx-primary-black);
}

.c10.ant-btn-link svg path {
  color: var(--acx-accents-blue-50);
}

.c10.ant-btn-link:hover {
  color: var(--acx-accents-blue-60);
}

.c10.ant-btn-link:hover svg path {
  color: var(--acx-accents-blue-60);
}

.c10.ant-btn-primary svg path {
  color: var(--acx-primary-white) !important;
}

.c10[disabled] svg path,
.c10.ant-btn-disabled svg path {
  color: var(--acx-primary-white);
}

.c10[disabled].ant-btn-link svg path,
.c10.ant-btn-disabled.ant-btn-link svg path,
.c10[disabled].ant-btn-default svg path,
.c10.ant-btn-disabled.ant-btn-default svg path,
.c10[disabled].ant-btn-primary svg path,
.c10.ant-btn-disabled.ant-btn-primary svg path {
  color: var(--acx-neutrals-40);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c2 .ant-select-focused .ant-select-selection-placeholder {
  color: var(--acx-neutrals-50);
}

.c2 .ant-select-selection-overflow-item-rest > .ant-select-selection-item {
  border: none;
  background: var(--acx-primary-white);
  min-width: 110px;
  padding-right: 0px;
  margin-right: 0px;
  margin-bottom: 0px;
}

.c9 {
  margin-top: 4px;
  margin-bottom: -4px;
  background-color: var(--acx-neutrals-10);
  text-align: right;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  padding: var(--acx-modal-footer-small-padding);
  gap: var(--acx-modal-footer-small-button-space);
}

.c6 {
  margin-top: 4px;
  border-top: 1px solid var(--acx-neutrals-20);
  padding: 10px;
  width: 350px;
}

.c7 {
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
  font-weight: var(--acx-body-font-weight);
}

.c8 .ant-checkbox-wrapper > span:last-child {
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
  font-weight: var(--acx-body-font-weight);
}

.c1 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.c0 {
  min-width: 169px;
  max-width: 322px;
  width: 322px;
}

.c0 .ant-select-selector > .ant-select-selection-overflow > .ant-select-selection-overflow-item.ant-select-selection-overflow-item-suffix {
  top: revert !important;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  line-height: 8px;
  -webkit-box-pack: right;
  -webkit-justify-content: right;
  -ms-flex-pack: right;
  justify-content: right;
}

@supports (-webkit-backdrop-filter:none) or (backdrop-filter:none) {

}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="ant-select ant-cascader c2 ant-select-focused ant-select-multiple ant-select-allow-clear ant-select-show-arrow ant-select-open ant-select-show-search"
      >
        <div
          class="ant-select-selector"
        >
          <div
            class="ant-select-selection-overflow"
          >
            <div
              aria-hidden="true"
              class="ant-select-selection-overflow-item ant-select-selection-overflow-item-rest"
              style="opacity: 0; height: 0px; overflow-y: hidden; order: 9007199254740991; pointer-events: none; position: absolute;"
            >
              <span
                class="ant-select-selection-item"
              >
                <span
                  class="ant-select-selection-item-content"
                >
                  <div
                    title="swg, swg1, venue, 2 bands selected"
                  >
                    2 items selected
                  </div>
                </span>
              </span>
            </div>
            <div
              class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
              style="opacity: 1; order: 0;"
            >
              <div
                class="ant-select-selection-search"
                style="width: 0px;"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="rc_select_TEST_OR_SSR_list"
                  aria-expanded="true"
                  aria-haspopup="listbox"
                  aria-owns="rc_select_TEST_OR_SSR_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  id="rc_select_TEST_OR_SSR"
                  role="combobox"
                  style=""
                  type="search"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="ant-select-selection-search-mirror"
                >
                   
                </span>
              </div>
            </div>
          </div>
        </div>
        <span
          aria-hidden="true"
          class="ant-select-arrow"
          style="user-select: none;"
          unselectable="on"
        >
          <span
            aria-label="search"
            class="anticon anticon-search ant-select-suffix"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="search"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
              />
            </svg>
          </span>
        </span>
        <div
          style="position: absolute; top: 0px; left: 0px; width: 100%;"
        >
          <div>
            <div
              class="ant-select-dropdown ant-cascader-dropdown"
              style="opacity: 0; min-width: auto;"
            >
              <div>
                <div
                  class="ant-cascader-menus"
                >
                  <ul
                    class="ant-cascader-menu"
                    role="menu"
                  >
                    <li
                      aria-checked="true"
                      class="ant-cascader-menu-item ant-cascader-menu-item-expand"
                      data-path-key="[{\\"type\\":\\"network\\",\\"name\\":\\"Network\\"},{\\"type\\":\\"switchGroup\\",\\"name\\":\\"id4\\"}]"
                      role="menuitemcheckbox"
                    >
                      <span
                        class="ant-cascader-checkbox ant-cascader-checkbox-checked"
                      >
                        <span
                          class="ant-cascader-checkbox-inner"
                        />
                      </span>
                      <div
                        class="ant-cascader-menu-item-content"
                      >
                        <div
                          class="c3"
                          title="swg"
                        >
                          <div
                            class="c4"
                          >
                            swg
                          </div>
                          <div
                            class="c5"
                          />
                        </div>
                      </div>
                      <div
                        class="ant-cascader-menu-item-expand-icon"
                      >
                        <span
                          aria-label="right"
                          class="anticon anticon-right"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="right"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                            />
                          </svg>
                        </span>
                      </div>
                    </li>
                    <li
                      aria-checked="false"
                      class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
                      data-path-key="[{\\"type\\":\\"network\\",\\"name\\":\\"Network\\"},{\\"type\\":\\"zone\\",\\"name\\":\\"id5\\"}]"
                      role="menuitemcheckbox"
                    >
                      <span
                        class="ant-cascader-checkbox ant-cascader-checkbox-indeterminate"
                      >
                        <span
                          class="ant-cascader-checkbox-inner"
                        />
                      </span>
                      <div
                        class="ant-cascader-menu-item-content"
                      >
                        <div
                          class="c3"
                          title="swg1"
                        >
                          <div
                            class="c4"
                          >
                            swg1
                          </div>
                          <div
                            class="c5"
                          />
                        </div>
                      </div>
                      <div
                        class="ant-cascader-menu-item-expand-icon"
                      >
                        <span
                          aria-label="right"
                          class="anticon anticon-right"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="right"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                            />
                          </svg>
                        </span>
                      </div>
                    </li>
                    <li
                      aria-checked="true"
                      class="ant-cascader-menu-item ant-cascader-menu-item-expand"
                      data-path-key="[{\\"type\\":\\"network\\",\\"name\\":\\"Network\\"},{\\"type\\":\\"zone\\",\\"name\\":\\"id1\\"}]"
                      role="menuitemcheckbox"
                    >
                      <span
                        class="ant-cascader-checkbox ant-cascader-checkbox-checked"
                      >
                        <span
                          class="ant-cascader-checkbox-inner"
                        />
                      </span>
                      <div
                        class="ant-cascader-menu-item-content"
                      >
                        <div
                          class="c3"
                          title="venue"
                        >
                          <div
                            class="c4"
                          >
                            venue
                          </div>
                          <div
                            class="c5"
                          />
                        </div>
                      </div>
                      <div
                        class="ant-cascader-menu-item-expand-icon"
                      >
                        <span
                          aria-label="right"
                          class="anticon anticon-right"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="right"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                            />
                          </svg>
                        </span>
                      </div>
                    </li>
                    <li
                      aria-checked="false"
                      class="ant-cascader-menu-item ant-cascader-menu-item-expand"
                      data-path-key="[{\\"type\\":\\"network\\",\\"name\\":\\"Network\\"},{\\"type\\":\\"zone\\",\\"name\\":\\"id3\\"}]"
                      role="menuitemcheckbox"
                    >
                      <span
                        class="ant-cascader-checkbox"
                      >
                        <span
                          class="ant-cascader-checkbox-inner"
                        />
                      </span>
                      <div
                        class="ant-cascader-menu-item-content"
                      >
                        <div
                          class="c3"
                          title="venue1"
                        >
                          <div
                            class="c4"
                          >
                            venue1
                          </div>
                          <div
                            class="c5"
                          />
                        </div>
                      </div>
                      <div
                        class="ant-cascader-menu-item-expand-icon"
                      >
                        <span
                          aria-label="right"
                          class="anticon anticon-right"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="right"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                            />
                          </svg>
                        </span>
                      </div>
                    </li>
                  </ul>
                  <ul
                    class="ant-cascader-menu"
                    role="menu"
                  >
                    <li
                      aria-checked="false"
                      class="ant-cascader-menu-item ant-cascader-menu-item-expand"
                      data-path-key="[{\\"type\\":\\"network\\",\\"name\\":\\"Network\\"},{\\"type\\":\\"zone\\",\\"name\\":\\"id5\\"}]__RC_CASCADER_SPLIT__apsid5"
                      role="menuitemcheckbox"
                    >
                      <span
                        class="ant-cascader-checkbox"
                      >
                        <span
                          class="ant-cascader-checkbox-inner"
                        />
                      </span>
                      <div
                        class="ant-cascader-menu-item-content"
                      >
                        <div
                          class="c3"
                          title="APs"
                        >
                          <div
                            class="c4"
                          >
                            APs
                          </div>
                          <div
                            class="c5"
                          />
                        </div>
                      </div>
                      <div
                        class="ant-cascader-menu-item-expand-icon"
                      >
                        <span
                          aria-label="right"
                          class="anticon anticon-right"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="right"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                            />
                          </svg>
                        </span>
                      </div>
                    </li>
                    <li
                      aria-checked="true"
                      class="ant-cascader-menu-item ant-cascader-menu-item-expand"
                      data-path-key="[{\\"type\\":\\"network\\",\\"name\\":\\"Network\\"},{\\"type\\":\\"zone\\",\\"name\\":\\"id5\\"}]__RC_CASCADER_SPLIT__switchesid5"
                      role="menuitemcheckbox"
                    >
                      <span
                        class="ant-cascader-checkbox ant-cascader-checkbox-checked"
                      >
                        <span
                          class="ant-cascader-checkbox-inner"
                        />
                      </span>
                      <div
                        class="ant-cascader-menu-item-content"
                      >
                        <div
                          class="c3"
                          title="Switches"
                        >
                          <div
                            class="c4"
                          >
                            Switches
                          </div>
                          <div
                            class="c5"
                          />
                        </div>
                      </div>
                      <div
                        class="ant-cascader-menu-item-expand-icon"
                      >
                        <span
                          aria-label="right"
                          class="anticon anticon-right"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="right"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                            />
                          </svg>
                        </span>
                      </div>
                    </li>
                  </ul>
                </div>
                <div
                  class="c6"
                >
                  <span
                    class="c7"
                    style="margin-right: 10px;"
                  >
                    Radio:
                  </span>
                  <div
                    class="ant-checkbox-group c8"
                  >
                    <label
                      class="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-group-item"
                    >
                      <span
                        class="ant-checkbox ant-checkbox-checked"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                          value="6"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                      <span>
                        6 GHz
                      </span>
                    </label>
                    <label
                      class="ant-checkbox-wrapper ant-checkbox-group-item"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                          value="5"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                      <span>
                        5 GHz
                      </span>
                    </label>
                    <label
                      class="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-group-item"
                    >
                      <span
                        class="ant-checkbox ant-checkbox-checked"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                          value="2.4"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                      <span>
                        2.4 GHz
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  class="c9"
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-sm c10"
                    type="button"
                  >
                    <span>
                      Cancel
                    </span>
                  </button>
                  <button
                    class="ant-btn ant-btn-primary ant-btn-sm c10"
                    type="button"
                  >
                    <span>
                      Apply
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
        <span
          aria-hidden="true"
          class="ant-select-clear"
          style="user-select: none;"
          unselectable="on"
        >
          <span
            aria-label="close-circle"
            class="anticon anticon-close-circle"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="close-circle"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Network Filter should select network node and bands with onApplyFn 1`] = `
<DocumentFragment>
  .c10 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
}

.c10 svg {
  width: 16px;
  height: 16px;
}

.c10 svg:before {
  content: 'a';
}

.c10 svg path {
  color: var(--acx-primary-black);
}

.c10.ant-btn-link svg path {
  color: var(--acx-accents-blue-50);
}

.c10.ant-btn-link:hover {
  color: var(--acx-accents-blue-60);
}

.c10.ant-btn-link:hover svg path {
  color: var(--acx-accents-blue-60);
}

.c10.ant-btn-primary svg path {
  color: var(--acx-primary-white) !important;
}

.c10[disabled] svg path,
.c10.ant-btn-disabled svg path {
  color: var(--acx-primary-white);
}

.c10[disabled].ant-btn-link svg path,
.c10.ant-btn-disabled.ant-btn-link svg path,
.c10[disabled].ant-btn-default svg path,
.c10.ant-btn-disabled.ant-btn-default svg path,
.c10[disabled].ant-btn-primary svg path,
.c10.ant-btn-disabled.ant-btn-primary svg path {
  color: var(--acx-neutrals-40);
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c2 .ant-select-focused .ant-select-selection-placeholder {
  color: var(--acx-neutrals-50);
}

.c2 .ant-select-selection-overflow-item-rest > .ant-select-selection-item {
  border: none;
  background: var(--acx-primary-white);
  min-width: 110px;
  padding-right: 0px;
  margin-right: 0px;
  margin-bottom: 0px;
}

.c9 {
  margin-top: 4px;
  margin-bottom: -4px;
  background-color: var(--acx-neutrals-10);
  text-align: right;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  padding: var(--acx-modal-footer-small-padding);
  gap: var(--acx-modal-footer-small-button-space);
}

.c6 {
  margin-top: 4px;
  border-top: 1px solid var(--acx-neutrals-20);
  padding: 10px;
  width: 350px;
}

.c7 {
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
  font-weight: var(--acx-body-font-weight);
}

.c8 .ant-checkbox-wrapper > span:last-child {
  font-size: var(--acx-body-4-font-size);
  line-height: var(--acx-body-4-line-height);
  font-weight: var(--acx-body-font-weight);
}

.c1 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.c0 {
  min-width: 169px;
  max-width: 322px;
  width: 322px;
}

.c0 .ant-select-selector > .ant-select-selection-overflow > .ant-select-selection-overflow-item.ant-select-selection-overflow-item-suffix {
  top: revert !important;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  line-height: 8px;
  -webkit-box-pack: right;
  -webkit-justify-content: right;
  -ms-flex-pack: right;
  justify-content: right;
}

@supports (-webkit-backdrop-filter:none) or (backdrop-filter:none) {

}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="ant-select ant-cascader c2 ant-select-focused ant-select-multiple ant-select-allow-clear ant-select-show-arrow ant-select-open ant-select-show-search"
      >
        <div
          class="ant-select-selector"
        >
          <div
            class="ant-select-selection-overflow"
          >
            <div
              class="ant-select-selection-overflow-item ant-select-selection-overflow-item-suffix"
              style="opacity: 1; order: 0;"
            >
              <div
                class="ant-select-selection-search"
                style="width: 0px;"
              >
                <input
                  aria-autocomplete="list"
                  aria-controls="rc_select_TEST_OR_SSR_list"
                  aria-expanded="true"
                  aria-haspopup="listbox"
                  aria-owns="rc_select_TEST_OR_SSR_list"
                  autocomplete="off"
                  class="ant-select-selection-search-input"
                  id="rc_select_TEST_OR_SSR"
                  role="combobox"
                  style=""
                  type="search"
                  value=""
                />
                <span
                  aria-hidden="true"
                  class="ant-select-selection-search-mirror"
                >
                   
                </span>
              </div>
            </div>
          </div>
          <span
            class="ant-select-selection-placeholder"
          >
            2 bands selected
          </span>
        </div>
        <span
          aria-hidden="true"
          class="ant-select-arrow"
          style="user-select: none;"
          unselectable="on"
        >
          <span
            aria-label="search"
            class="anticon anticon-search ant-select-suffix"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="search"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
              />
            </svg>
          </span>
        </span>
        <div
          style="position: absolute; top: 0px; left: 0px; width: 100%;"
        >
          <div>
            <div
              class="ant-select-dropdown ant-cascader-dropdown"
              style="opacity: 0; min-width: auto;"
            >
              <div>
                <div
                  class="ant-cascader-menus"
                >
                  <ul
                    class="ant-cascader-menu"
                    role="menu"
                  >
                    <li
                      aria-checked="false"
                      class="ant-cascader-menu-item ant-cascader-menu-item-expand"
                      data-path-key="[{\\"type\\":\\"network\\",\\"name\\":\\"Network\\"},{\\"type\\":\\"switchGroup\\",\\"name\\":\\"id4\\"}]"
                      role="menuitemcheckbox"
                    >
                      <span
                        class="ant-cascader-checkbox"
                      >
                        <span
                          class="ant-cascader-checkbox-inner"
                        />
                      </span>
                      <div
                        class="ant-cascader-menu-item-content"
                      >
                        <div
                          class="c3"
                          title="swg"
                        >
                          <div
                            class="c4"
                          >
                            swg
                          </div>
                          <div
                            class="c5"
                          />
                        </div>
                      </div>
                      <div
                        class="ant-cascader-menu-item-expand-icon"
                      >
                        <span
                          aria-label="right"
                          class="anticon anticon-right"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="right"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                            />
                          </svg>
                        </span>
                      </div>
                    </li>
                    <li
                      aria-checked="false"
                      class="ant-cascader-menu-item ant-cascader-menu-item-expand"
                      data-path-key="[{\\"type\\":\\"network\\",\\"name\\":\\"Network\\"},{\\"type\\":\\"zone\\",\\"name\\":\\"id5\\"}]"
                      role="menuitemcheckbox"
                    >
                      <span
                        class="ant-cascader-checkbox"
                      >
                        <span
                          class="ant-cascader-checkbox-inner"
                        />
                      </span>
                      <div
                        class="ant-cascader-menu-item-content"
                      >
                        <div
                          class="c3"
                          title="swg1"
                        >
                          <div
                            class="c4"
                          >
                            swg1
                          </div>
                          <div
                            class="c5"
                          />
                        </div>
                      </div>
                      <div
                        class="ant-cascader-menu-item-expand-icon"
                      >
                        <span
                          aria-label="right"
                          class="anticon anticon-right"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="right"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                            />
                          </svg>
                        </span>
                      </div>
                    </li>
                    <li
                      aria-checked="false"
                      class="ant-cascader-menu-item ant-cascader-menu-item-expand"
                      data-path-key="[{\\"type\\":\\"network\\",\\"name\\":\\"Network\\"},{\\"type\\":\\"zone\\",\\"name\\":\\"id1\\"}]"
                      role="menuitemcheckbox"
                    >
                      <span
                        class="ant-cascader-checkbox"
                      >
                        <span
                          class="ant-cascader-checkbox-inner"
                        />
                      </span>
                      <div
                        class="ant-cascader-menu-item-content"
                      >
                        <div
                          class="c3"
                          title="venue"
                        >
                          <div
                            class="c4"
                          >
                            venue
                          </div>
                          <div
                            class="c5"
                          />
                        </div>
                      </div>
                      <div
                        class="ant-cascader-menu-item-expand-icon"
                      >
                        <span
                          aria-label="right"
                          class="anticon anticon-right"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="right"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                            />
                          </svg>
                        </span>
                      </div>
                    </li>
                    <li
                      aria-checked="false"
                      class="ant-cascader-menu-item ant-cascader-menu-item-expand"
                      data-path-key="[{\\"type\\":\\"network\\",\\"name\\":\\"Network\\"},{\\"type\\":\\"zone\\",\\"name\\":\\"id3\\"}]"
                      role="menuitemcheckbox"
                    >
                      <span
                        class="ant-cascader-checkbox"
                      >
                        <span
                          class="ant-cascader-checkbox-inner"
                        />
                      </span>
                      <div
                        class="ant-cascader-menu-item-content"
                      >
                        <div
                          class="c3"
                          title="venue1"
                        >
                          <div
                            class="c4"
                          >
                            venue1
                          </div>
                          <div
                            class="c5"
                          />
                        </div>
                      </div>
                      <div
                        class="ant-cascader-menu-item-expand-icon"
                      >
                        <span
                          aria-label="right"
                          class="anticon anticon-right"
                          role="img"
                        >
                          <svg
                            aria-hidden="true"
                            data-icon="right"
                            fill="currentColor"
                            focusable="false"
                            height="1em"
                            viewBox="64 64 896 896"
                            width="1em"
                          >
                            <path
                              d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                            />
                          </svg>
                        </span>
                      </div>
                    </li>
                  </ul>
                </div>
                <div
                  class="c6"
                >
                  <span
                    class="c7"
                    style="margin-right: 10px;"
                  >
                    Radio:
                  </span>
                  <div
                    class="ant-checkbox-group c8"
                  >
                    <label
                      class="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-group-item"
                    >
                      <span
                        class="ant-checkbox ant-checkbox-checked"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                          value="6"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                      <span>
                        6 GHz
                      </span>
                    </label>
                    <label
                      class="ant-checkbox-wrapper ant-checkbox-group-item"
                    >
                      <span
                        class="ant-checkbox"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                          value="5"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                      <span>
                        5 GHz
                      </span>
                    </label>
                    <label
                      class="ant-checkbox-wrapper ant-checkbox-wrapper-checked ant-checkbox-group-item"
                    >
                      <span
                        class="ant-checkbox ant-checkbox-checked"
                      >
                        <input
                          class="ant-checkbox-input"
                          type="checkbox"
                          value="2.4"
                        />
                        <span
                          class="ant-checkbox-inner"
                        />
                      </span>
                      <span>
                        2.4 GHz
                      </span>
                    </label>
                  </div>
                </div>
                <div
                  class="c9"
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-sm c10"
                    type="button"
                  >
                    <span>
                      Cancel
                    </span>
                  </button>
                  <button
                    class="ant-btn ant-btn-primary ant-btn-sm c10"
                    type="button"
                  >
                    <span>
                      Apply
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Network Filter with incident severity should not show any severity circle when venueHierarchy is empty 1`] = `
<DocumentFragment>
  .c4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  vertical-align: bottom;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  gap: 8px;
}

.c4 svg {
  width: 16px;
  height: 16px;
}

.c4 svg:before {
  content: 'a';
}

.c4 svg path {
  color: var(--acx-primary-black);
}

.c4.ant-btn-link svg path {
  color: var(--acx-accents-blue-50);
}

.c4.ant-btn-link:hover {
  color: var(--acx-accents-blue-60);
}

.c4.ant-btn-link:hover svg path {
  color: var(--acx-accents-blue-60);
}

.c4.ant-btn-primary svg path {
  color: var(--acx-primary-white) !important;
}

.c4[disabled] svg path,
.c4.ant-btn-disabled svg path {
  color: var(--acx-primary-white);
}

.c4[disabled].ant-btn-link svg path,
.c4.ant-btn-disabled.ant-btn-link svg path,
.c4[disabled].ant-btn-default svg path,
.c4.ant-btn-disabled.ant-btn-default svg path,
.c4[disabled].ant-btn-primary svg path,
.c4.ant-btn-disabled.ant-btn-primary svg path {
  color: var(--acx-neutrals-40);
}

.c2 .ant-select-focused .ant-select-selection-placeholder {
  color: var(--acx-neutrals-50);
}

.c2 .ant-select-selection-overflow-item-rest > .ant-select-selection-item {
  border: none;
  background: var(--acx-primary-white);
  min-width: 110px;
  padding-right: 0px;
  margin-right: 0px;
  margin-bottom: 0px;
}

.c3 {
  margin-top: 4px;
  margin-bottom: -4px;
  background-color: var(--acx-neutrals-10);
  text-align: right;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  padding: var(--acx-modal-footer-small-padding);
  gap: var(--acx-modal-footer-small-button-space);
}

.c1 {
  position: relative;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  height: 100%;
}

.c0 {
  min-width: 169px;
  max-width: 322px;
  width: 322px;
}

.c0 .ant-select-selector > .ant-select-selection-overflow > .ant-select-selection-overflow-item.ant-select-selection-overflow-item-suffix {
  top: revert !important;
}

@supports (-webkit-backdrop-filter:none) or (backdrop-filter:none) {

}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="ant-select ant-cascader c2 ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-open ant-select-show-search"
      >
        <div
          class="ant-select-selector"
        >
          <span
            class="ant-select-selection-search"
          >
            <input
              aria-autocomplete="list"
              aria-controls="rc_select_TEST_OR_SSR_list"
              aria-expanded="true"
              aria-haspopup="listbox"
              aria-owns="rc_select_TEST_OR_SSR_list"
              autocomplete="off"
              class="ant-select-selection-search-input"
              id="rc_select_TEST_OR_SSR"
              role="combobox"
              type="search"
              value=""
            />
          </span>
          <span
            class="ant-select-selection-placeholder"
          >
            Entire Organization
          </span>
        </div>
        <span
          aria-hidden="true"
          class="ant-select-arrow"
          style="user-select: none;"
          unselectable="on"
        >
          <span
            aria-label="search"
            class="anticon anticon-search ant-select-suffix"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="search"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M909.6 854.5L649.9 594.8C690.2 542.7 712 479 712 412c0-80.2-31.3-155.4-87.9-212.1-56.6-56.7-132-87.9-212.1-87.9s-155.5 31.3-212.1 87.9C143.2 256.5 112 331.8 112 412c0 80.1 31.3 155.5 87.9 212.1C256.5 680.8 331.8 712 412 712c67 0 130.6-21.8 182.7-62l259.7 259.6a8.2 8.2 0 0011.6 0l43.6-43.5a8.2 8.2 0 000-11.6zM570.4 570.4C528 612.7 471.8 636 412 636s-116-23.3-158.4-65.6C211.3 528 188 471.8 188 412s23.3-116.1 65.6-158.4C296 211.3 352.2 188 412 188s116.1 23.2 158.4 65.6S636 352.2 636 412s-23.3 116.1-65.6 158.4z"
              />
            </svg>
          </span>
        </span>
        <div
          style="position: absolute; top: 0px; left: 0px; width: 100%;"
        >
          <div>
            <div
              class="ant-select-dropdown ant-cascader-dropdown ant-select-dropdown-empty"
              style="opacity: 0; min-width: 1280px;"
            >
              <div>
                <div
                  class="ant-cascader-menus ant-cascader-menu-empty"
                >
                  <ul
                    class="ant-cascader-menu"
                    role="menu"
                  >
                    <li
                      aria-checked="false"
                      class="ant-cascader-menu-item ant-cascader-menu-item-disabled"
                      data-path-key="__EMPTY__"
                      role="menuitemcheckbox"
                    >
                      <div
                        class="ant-cascader-menu-item-content"
                      >
                        <div
                          class="ant-empty ant-empty-normal ant-empty-small"
                        >
                          <div
                            class="ant-empty-image"
                          >
                            <svg
                              class="ant-empty-img-simple"
                              height="41"
                              viewBox="0 0 64 41"
                              width="64"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <g
                                fill="none"
                                fill-rule="evenodd"
                                transform="translate(0 1)"
                              >
                                <ellipse
                                  class="ant-empty-img-simple-ellipse"
                                  cx="32"
                                  cy="33"
                                  rx="32"
                                  ry="7"
                                />
                                <g
                                  class="ant-empty-img-simple-g"
                                  fill-rule="nonzero"
                                >
                                  <path
                                    d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                                  />
                                  <path
                                    class="ant-empty-img-simple-path"
                                    d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                                  />
                                </g>
                              </g>
                            </svg>
                          </div>
                          <div
                            class="ant-empty-description"
                          >
                            No Data
                          </div>
                        </div>
                      </div>
                    </li>
                  </ul>
                </div>
                <div
                  class="c3"
                >
                  <button
                    class="ant-btn ant-btn-default ant-btn-sm c4"
                    type="button"
                  >
                    <span>
                      Cancel
                    </span>
                  </button>
                  <button
                    class="ant-btn ant-btn-primary ant-btn-sm c4"
                    type="button"
                  >
                    <span>
                      Apply
                    </span>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
